Add education travels and work to partials.

--- a/source/_contact.html.erb
+++ b/source/_contact.html.erb
@@ -22,7 +22,7 @@
 </ul>
 </div>
 <div class="col-sm-6">
-  <form class="form-horizontal" action="https://formspree.io/d_gordon1@icloud.com" method="post" role="form" id="contactForm">
+  <form class="form-horizontal" action="https://formspree.io/d_gordon1@icloud.com" method="POST" role="form" id="contactForm">
    <div class="form-group">
     <div class="col-sm-6">
      <input type="text" name="name" class="form-control" placeholder="Name">
