--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -57,76 +57,7 @@ title: Daniel Gordon
   </div>
 </section>
 
-<!-- Work Experience -->
-<section id="work_experience" class="section section-solid">
- <div class="container">
-  <div class="row">
-   <div class="col-sm-12">
-    <h3 class="v-heading section-title"><i class="fa fa-briefcase"></i> Work experience</h3>
-    <div class="section-title-border"></div>
-  </div>
-</div>
-<div class="row">
- <div class="col-sm-12">
-  <ul class="v-timeline mt50">
-    <li>
-      <time class="v-time"><span>2017 - Present</span></time>
-      <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"></div> -->
-      <div class="v-label">
-        <h4 data-toggle="collapse in" data-target="#toggle-1">Freelance Developer/TA Le Wagon <a href="http://lewagon.com/"></a></h4>
-        <p id="toggle-1" class="collapse in">Working as a freelancer on several projects and as a Teaching Assistent at Le Wagon.</p>
-     </div>
-   </li>
-  <li>
-      <time class="v-time"><span>2016 - 2017</span></time>
-      <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"></div> -->
-      <div class="v-label">
-        <h4 data-toggle="collapse" data-target="#toggle-2">Developer, <a href="http://oefenweb.nl/">Oefenweb</a></h4>
-        <p id="toggle-2" class="collapse">Oefenweb.nl is a spin-off company of the University of Amsterdam (UvA). Products of Oefenweb.nl are web based training-tracking systems to playfully train and measure mathematical or language skills. The products are adaptive; the difficulty of the exercises thus automatically adjusts to the skills of each child. This way the exercises stay challenging for every pupil. Oefenweb seeks to bridge the gap between education and science by using the collected anonymised data to develop new scientific insights.</p>
-     </div>
-   </li>
-    <li>
-      <time class="v-time"><span>2016</span></time>
-      <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"></div> -->
-      <div class="v-label">
-        <h4 data-toggle="collapse" data-target="#toggle-3">Junior Developer, <a href="http://voormedia.com/">Voormedia</a></h4>
-        <p id="toggle-3" class="collapse"> This agency creates websites, produces video and builds applications. Their expertise and software enables companies to serve customers online. Over the course of three months I helped build <a href="http://www.taxology.nl">Protocol.</a> This web app eases the process of reclaiming WHT on foreign dividends. </p>
-     </div>
-   </li>
-   <li>
-    <time class="v-time"><span>2015 - present</span></time>
-    <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-1"></div> -->
-      <div class="v-label">
-        <h4 data-toggle="collapse" data-target="#toggle-4">Social Entrepreneur</h4>
-        <p id="toggle-4" class="collapse"> Co-founder of <a href="http://ouwetaart.amsterdam">OuweTaart.amsterdam</a>, this platform is designed to bring together two groups in society that not often enough have the pleasure to spend time with each other. By facilitating the platform where demand and supply meet we hope to provide elder citizens with an increase in personal value creation and young people with the option to buy an artisanal product or service made especially for them.
-      </div>
-    </li>
-    <li>
-      <time class="v-time"><span>2015</span></time>
-      <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"></div> -->
-      <div class="v-label">
-       <h4 data-toggle="collapse" data-target="#toggle-5">Brainstormer</h4>
-       <p id="toggle-5" class="collapse">Denk-Tenk is about the activation of creative and innovative thinking processes.</p>
-     </div>
-   </li>
-   <li>
-    <time class="v-time"><span>2015</span></time>
-    <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-3"></div> -->
-    <div class="v-label">
-     <h4 data-toggle="collapse" data-target="#toggle-6">Trainee</h4>
-     <p id="toggle-6" class="collapse"><a href="http://www.starters4communities.nl">Starters4Communities</a><br> By linking starters on the Labor Market to entrepreneurial neighborhood initiatives and using new forms of cooperation and design thinking we innovate together; a bottom-up search for the solutions and challenges of todays world.</p>
-   </div>
- </li>
- <li>
-  <time class="v-time"><span>2010-2015</span></time>
-  <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-4"></div> -->
-  <div class="v-label">
-   <h4 data-toggle="collapse" data-target="#toggle-7">Manager/Assistant-Manager</h4>
-   <p id="toggle-7" class="collapse">De Biertuin Amsterdam (Bar), Kade58 (Restaurant).</p>
- </div>
-</li>
-</ul>
-</section>
+<%= partial "work" %>
 
 <!-- section -->
 
@@ -147,92 +78,10 @@ title: Daniel Gordon
 </div>
 </section>
 
-<!-- Education -->
 
-<section id="education" class="section section-solid">
- <div class="container">
-  <div class="row">
-   <div class="col-sm-12">
-    <h3 class="v-heading section-title"><i class="fa fa-graduation-cap"></i> Education</h3>
-    <div class="col-sm-12">
-      <div class="section-title-border"></div>
 
-      <ul class="v-timeline mt50">
-        <li>
-          <time class="v-time"><span>2016</span></time>
-          <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-6"><i class="fa fa-minus"></i></div> -->
-          <div class="v-label">
-           <h4 data-toggle="collapse" data-target="#toggle-6">Le Wagon - Fullstack Dev
-            Bootcamp</h4>
-            <p id="toggle-6" class="collapse in"><a href="http://www.lewagon.org/en">Le Wagon</a> is a coding school for entrepreneurs and creative people, Amsterdam, The Netherlands.</p>
-          </div>
-        </li>
-        <li>
-          <time class="v-time"><span>2014-2015</span></time>
-          <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-7"><i class="fa fa-plus"></i></div> -->
-          <div class="v-label">
-           <h4 data-toggle="collapse" data-target="#toggle-7"> Master of Science in Sociology</h4>
-           <p id="toggle-7" class="collapse"><a href="http://gsss.uva.nl/programmes"> Graduate School of the Social Sciences</a><br>Focus on Urban and Organizational Sociology. Final thesis written about entrepreneurship among young people in Shenzhen(China); data was gathered on location. University of Amsterdam, Amsterdam, The Netherlands.</p>
-         </div>
-       </li>
-       <li>
-        <time class="v-time"><span>2010-2013</span></time>
-        <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-8"><i class="fa fa-plus"></i></div> -->
-        <div class="v-label">
-          <h4 data-toggle="collapse" data-target="#toggle-8">Bachelor of Science in Sociology</h4>
-          <p id="toggle-8" class="collapse">
-            Focus on Educational and Organizational Sociology. Final thesis written about the organizational culture of a privately held company(Institute for Social Innovation) focused on innovating government processes. University of Amsterdam, Amsterdam, the Netherlands.</p>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
-</section>
-
-<!-- Cards about my travels -->
-<section class="section" id="travels">
-  <div class="container">
-    <!-- <h2 class="text-center">Travel Destinations <i class="fa fa-paper-plane-o"></i></h2>
-    <div class="section-title-border"></div>
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="card" style="background-image: url('assets/css/images/shenzhen-card.jpg');">
-          <div class="card-category">
-            2015
-          </div>
-          <div class="card-description">
-            <p> I spent 3 months in South-China in Shenzhen, also dubbed the Silicon Valley of hardware to gather information for my Masters' Research into small-scale entrepreneurs. A collaboration between the International New Town Institute, the University of Amsterdam and the Shenzhen Center for Design.</p>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <div class="row">
-      <div class="col-xs-12 col-sm-6">
-        <div class="card" style="background-image: url('images/card-SEA.jpg');">
-          <div class="card-category">
-            2013/2014 - SEA
-          </div>
-          <div class="card-description">
-            <!-- <p> From December 2013 until april 2014 I spent four months travelling through SEA visiting Thailand, Laos, Cambodia, Vietnam, Malaysia and Indonesia by bus, train, plane and motorbike. </p> -->
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6">
-        <div class="card" style="background-image: url('images/card-jamaica.jpg');">
-          <div class="card-category">
-            2011 - Jamaica
-          </div>
-          <div class="card-description">
-            <!-- <p> After the first year of my Bachelor I visited my family in Jamaica for the first time in 15 years. This helped me to come closer to my roots. </p> -->
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</section>
-
+<%= partial "education" %>
+<%= partial "travels" %>
 <%= partial "skills" %>
 <%= partial "contact" %>
 
