move header to partial.

--- a/source/_skills.html.erb
+++ b/source/_skills.html.erb
@@ -52,6 +52,7 @@
         <h5>PHP</h5>
       </div>
       <ul class="fa-ul skills-ul prog-ul">
+        <li><i class="fa-li fa fa-check"></i>Wordpress</li>
         <li><i class="fa-li fa fa-check"></i>CakePHP</li>
       </ul>
     </div>
