--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,50 +1,8 @@
 ---
 title: Daniel Gordon
 ---
-<!-- Main -->
-<section class="main" id="home">
- <div class="page">
-  <div class="wrapper">
-   <div class="container">
-    <h1 class="heading">Daniel Gordon</h1>
-    <p>
-     <span class="hobbies">Sociologist, Entrepreneur, Ruby-ist, Freelancer, Software Developer, Music Lover. </span>
-   </p>
- </div>
- <div class="arrow-down">
-  <a class="scroll" href="#me" id="scroll"><i class="fa fa-angle-double-down"></i></a>
-</div>
-</div>
-</div>
-</section>
 
-<!-- About -->
-<section id="me" class="section section-solid">
- <div class="container">
-  <div class="row">
-   <div class="col-sm-12">
-    <h3 class="section-title">Me</h3>
-    <div class="section-title-border"></div>
-  </div>
-</div>
-
-<div class="row mt20">
- <div class="col-sm-4">
-  <img src="images/daniel.jpg" class="img-responsive about-img" />
-</div>
-<div class="col-sm-8">
-  <div class="about">
-    <p class="lead">
-     I'm a Sociologist that shifted to building web applications using Ruby on Rails.
-   </p>
-   <p>
-    After graduating in Sociology on a thesis regarding young entrepreneurs in Shenzhen <em>(considered the Silicon Valley of hardware)</em> my interest in the the tech- and startup scene was sparked. Upon following a traineeship towards social entrepreneurship and starting my own social startup I decided I wanted to learn how to code. <a href="http://www.lewagon.org/en">Le Wagon</a> Dev bootcamp gave me the tools to work in a tech-company as a developer or to take my own startup to the next level.
-  </p>
-</div>
-</div>
-</div>
-</section>
-
+<%= partial "work" %>
 
 <!-- Section -->
 <section class="section">
@@ -60,7 +18,6 @@ title: Daniel Gordon
 <%= partial "work" %>
 
 <!-- section -->
-
 <section class="section">
  <div class="container">
   <div class="row">
@@ -78,20 +35,7 @@ title: Daniel Gordon
 </div>
 </section>
 
-
-
 <%= partial "education" %>
 <%= partial "travels" %>
 <%= partial "skills" %>
 <%= partial "contact" %>
-
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<!-- <script src="assets/js/jquery.min.js"></script> -->
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<!-- <script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/bootstrapValidator.min.js"></script>
-<script src="assets/js/validator/emailAddress.js"></script>
-<script src="assets/js/app.js"></script>
-<script src="assets/js/ladda.min.js"></script>
-<script src="assets/js/jquery.knob.min.js"></script> -->
