--- a/source/_contact.html.erb
+++ b/source/_contact.html.erb
@@ -28,7 +28,7 @@
      <input type="text" name="name" class="form-control" placeholder="Name">
    </div>
    <div class="col-sm-6">
-     <input type="text" name="contactEmail" class="form-control" placeholder="Email">
+     <input type="text" name="_replyto" class="form-control" placeholder="Email">
    </div>
  </div>
  <div class="form-group">
@@ -39,7 +39,7 @@
 <div class="form-group">
   <div class="col-sm-12">
     <input type="text" name="_gotcha" style="display:none">
-    <button type="submit" class="btn btn-theme ladda-button" data-style="expand-left">
+    <button type="submit" value="send" class="btn btn-theme ladda-button" data-style="expand-left">
      <span class="ladda-label">Submit</span>
    </button>
  </div>
