fix max-width skill columns.

--- a/source/stylesheets/components/_app.css.scss
+++ b/source/stylesheets/components/_app.css.scss
@@ -780,6 +780,12 @@ form.signup button.btn {
   height: 160px;
 }
 
+@media (min-width: 992px) {
+  .skill-column {
+    max-width: 21%;
+  }
+}
+
 /*
  * Facts
  * --------------------------------------------------------- */
