--- a/source/_skills.html.erb
+++ b/source/_skills.html.erb
@@ -11,7 +11,7 @@
  <div class="col-sm-8 wow fadeInLeft" data-wow-duration="0.7s" data-wow-delay="0s">
   <h4>Non-Human languages</h4>
   <div class="row">
-    <div class="col-xs-6 col-sm-4 col-md-3">
+    <div class="skill-column col-xs-6 col-sm-4 col-md-3">
       <div class="text-center">
         <i class="fa fa-diamond" style="font-size: 30px; padding: 10px;"></i>
         <h5>Ruby &amp; Ruby on Rails</h5>
@@ -23,7 +23,7 @@
         <li><i class="fa-li fa fa-check"></i>RESTful API</li>
       </ul>
     </div>
-    <div class="col-xs-6 col-sm-4 col-md-3">
+    <div class="skill-column col-xs-6 col-sm-4 col-md-3">
       <div class="text-center">
         <i class="fa fa-html5 prog-logo" style="font-size: 30px; padding: 10px;"></i>
         <h5>HTML &amp; CSS</h5>
@@ -36,7 +36,7 @@
         <li><i class="fa-li fa fa-check"></i>Bootstrap</li>
       </ul>
     </div>
-    <div class="col-xs-6 col-sm-4 col-md-3">
+    <div class="skill-column col-xs-6 col-sm-4 col-md-3">
       <div class="text-center">
         <img src="images/js.svg" alt="Javascript" width="50px" style="padding: 10px;">
         <h5>Javascript</h5>
@@ -46,7 +46,7 @@
         <li><i class="fa-li fa fa-check"></i>jQuery</li>
       </ul>
     </div>
-    <div class="col-xs-6 col-sm-4 col-md-3">
+    <div class="skill-column col-xs-6 col-sm-4 col-md-3">
       <div class="text-center">
         <img src="images/php-logo.svg" alt="PHP" height="50px" style="padding: 10px;">
         <h5>PHP</h5>
@@ -58,7 +58,7 @@
     </div>
   </div>
   <div class="row text-center">
-    <div class="col-xs-6 col-sm-4 col-md-3">
+    <div class="skill-column col-xs-6 col-sm-4 col-md-3">
       <h4>Tools</h4>
       <ul class="fa-ul skills-ul">
         <li><i class="fa-li fa fa-check"></i>Git & Github</li>
@@ -67,7 +67,7 @@
         <li><i class="fa-li fa fa-check"></i>SCRUM</li>
       </ul>
     </div>
-    <div class="col-xs-6 col-sm-4 col-md-3">
+    <div class="skill-column col-xs-6 col-sm-4 col-md-3">
       <h4>Hobbies</h4>
       <ul class="fa-ul skills-ul">
         <li><i class="fa-li fa fa-plane"></i>Travelling</li>
