--- a/source/_skills.html.erb
+++ b/source/_skills.html.erb
@@ -60,7 +60,7 @@
   <div class="row text-center">
     <div class="skill-column col-xs-6 col-sm-4 col-md-3">
       <h4>Tools</h4>
-      <ul class="fa-ul skills-ul">
+      <ul class="fa-ul skills-ul prog-ul">
         <li><i class="fa-li fa fa-check"></i>Git & Github</li>
         <li><i class="fa-li fa fa-check"></i>Heroku</li>
         <li><i class="fa-li fa fa-check"></i>Command Line</li>
@@ -69,7 +69,7 @@
     </div>
     <div class="skill-column col-xs-6 col-sm-4 col-md-3">
       <h4>Hobbies</h4>
-      <ul class="fa-ul skills-ul">
+      <ul class="fa-ul skills-ul prog-ul">
         <li><i class="fa-li fa fa-plane"></i>Travelling</li>
         <li><i class="fa-li fa fa-headphones"></i>Music</li>
         <li><i class="fa-li fa fa-video-camera"></i>Series</li>
