--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,28 +14,10 @@ title: Daniel Gordon
     </div>
   </div>
 </section>
-
+<%= partial "about" %>
 <%= partial "work" %>
 
-<!-- section -->
-<section class="section">
- <div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="card" style="background-image: url('images/shenzhen-card.jpg');">
-        <div class="card-category">
-          2015 - Shenzhen
-        </div>
-        <div class="card-description">
-          <!-- <p> I spent 3 months in South-China in Shenzhen, also dubbed the Silicon Valley of hardware, to gather information for my Masters' Research into young small-scale entrepreneurs. A collaboration between the International New Town Institute, the University of Amsterdam and the Shenzhen Center for Design.</p> -->
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</section>
-
 <%= partial "education" %>
-<%= partial "travels" %>
+
 <%= partial "skills" %>
 <%= partial "contact" %>
