--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -15,7 +15,7 @@
           <li><a href="#me">Me</a></li>
           <li><a href="#work_experience">Work Experience</a></li>
           <li><a href="#education">Education</a></li>
-          <li><a href="#travels">Travels</a></li>
+          <!-- <li><a href="#travels">Travels</a></li> -->
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
