basic implementation portfolio matrix.

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -8,6 +8,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,300italic,700,400italic,300);
+@import "portfolio/main";
 
 // Our CSS
 @import "layouts/*";
