Fix padding on footer.

--- a/source/_portfolio.html.erb
+++ b/source/_portfolio.html.erb
@@ -1,17 +1,6 @@
 <section id="portfolio" class="section section-solid">
   <!-- Wrapper -->
   <div id="wrapper">
-
-    <!-- Header -->
-      <header id="header">
-        <h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
-        <nav>
-          <ul>
-            <li><a href="#footer" class="icon fa-info-circle">About</a></li>
-          </ul>
-        </nav>
-      </header>
-
     <!-- Main -->
       <div id="main">
         <article class="thumb">
@@ -76,3 +65,4 @@
         </article>
       </div>
   </div>
+</section>
