Fix php logo and finalize first vrsion portfolio.

--- a/source/_portfolio.html.erb
+++ b/source/_portfolio.html.erb
@@ -1,67 +1,44 @@
 <section id="portfolio" class="section section-solid">
+  <div class="row">
+   <div class="col-sm-12">
+<h3 class="v-heading section-title"><i class="fa fa-folder-open-o"></i> Portfolio</h3>
+    <div class="section-title-border"></div>
+  </div>
+</div>
+
   <!-- Wrapper -->
   <div id="wrapper">
     <!-- Main -->
       <div id="main">
         <article class="thumb">
-          <a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
-          <h2>Magna feugiat lorem</h2>
-          <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+          <a href="images/portfolio/rekentuin.png" class="image"><img src="images/portfolio/rekentuin.png" alt="" /></a>
+          <h2>Rekentuin</h2>
+          <p></p>
         </article>
         <article class="thumb">
-          <a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-          <h2>Nisl adipiscing</h2>
-          <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+          <a href="images/portfolio/bodine_portfolio.jpg" class="image"><img src="images/portfolio/bodine_portfolio.jpg" alt="" /></a>
+          <h2>Portfolio Bodine</h2>
+          <p></p>
         </article>
         <article class="thumb">
-          <a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-          <h2>Tempus aliquam veroeros</h2>
-          <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+          <a href="images/portfolio/wordsandbirds.png" class="image"><img src="images/portfolio/wordsandbirds.png" alt="" /></a>
+          <h2>WordsandBirds</h2>
+          <p></p>
         </article>
         <article class="thumb">
-          <a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-          <h2>Aliquam ipsum sed dolore</h2>
-          <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+          <a href="images/portfolio/ouwetaart.jpg" class="image"><img src="images/portfolio/ouwetaart.jpg" alt="" /></a>
+          <h2>Ouwe Taart</h2>
+          <p></p>
         </article>
         <article class="thumb">
-          <a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
-          <h2>Cursis aliquam nisl</h2>
-          <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+          <a href="images/portfolio/taalzee.png" class="image"><img src="images/portfolio/taalzee.png" alt="" /></a>
+          <h2>Taalzee</h2>
+          <p></p>
         </article>
         <article class="thumb">
-          <a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-          <h2>Sed consequat phasellus</h2>
-          <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-        </article>
-        <article class="thumb">
-          <a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-          <h2>Mauris id tellus arcu</h2>
-          <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-        </article>
-        <article class="thumb">
-          <a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
-          <h2>Nunc vehicula id nulla</h2>
-          <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-        </article>
-        <article class="thumb">
-          <a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
-          <h2>Neque et faucibus viverra</h2>
-          <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-        </article>
-        <article class="thumb">
-          <a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
-          <h2>Mattis ante fermentum</h2>
-          <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-        </article>
-        <article class="thumb">
-          <a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
-          <h2>Sed ac elementum arcu</h2>
-          <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-        </article>
-        <article class="thumb">
-          <a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-          <h2>Vehicula id nulla dignissim</h2>
-          <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+          <a href="images/portfolio/protocol.jpg" class="image"><img src="images/portfolio/protocol.jpg" alt="" /></a>
+          <h2>Protocol</h2>
+          <p></p>
         </article>
       </div>
   </div>
