--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -37,3 +37,8 @@
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 }
+
+#portfolio {
+  padding-bottom: 0px;
+  padding-top: 45px;
+}
