--- a/source/stylesheets/portfolio/main.css
+++ b/source/stylesheets/portfolio/main.css
@@ -1105,6 +1105,12 @@
 		background: rgba(31, 34, 36, 0.925);
 		box-shadow: 0 1em 3em 0.5em rgba(0, 0, 0, 0.25);
 		cursor: default;
+		border-radius: 10px;
+	}
+
+	.poptrox-popup .pic * {
+		border-radius: 10px;
+
 	}
 
 		.poptrox-popup:before {
@@ -1125,6 +1131,7 @@
 			width: 100%;
 			z-index: 1;
 			opacity: 1;
+			border-radius: 10px;
 		}
 
 		.poptrox-popup .closer {
@@ -1190,6 +1197,7 @@
 			text-align: left;
 			width: 100%;
 			z-index: 2;
+			border-radius: 10px;
 		}
 
 			.poptrox-popup .caption h2, .poptrox-popup .caption h3, .poptrox-popup .caption h4, .poptrox-popup .caption h5, .poptrox-popup .caption h6 {
